--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -13,10 +13,17 @@ jobs:
     steps:
       - name: Check out repository
         uses: actions/checkout@v4
+        
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          packages:
+            any::rmarkdown
+            any::knitr
+      - uses: r-lib/actions/setup-tinytex@v1
 
       - name: Set up Quarto
         uses: quarto-dev/quarto-actions/setup@v2
-
+        
       - name: Render and Publish
         uses: quarto-dev/quarto-actions/publish@v2
         with:
