--- a/_quarto.yml
+++ b/_quarto.yml
@@ -6,6 +6,7 @@ book:
   title: "데이터 분석을 위한 실무 R"
   author: "YK"
   date: last-modified
+  date-format: iso
   chapters:
     - index.qmd
     - identify.qmd
